--- a/css/Indexmain.css
+++ b/css/Indexmain.css
@@ -2459,7 +2459,7 @@
 		border: 0;
 		display: inline-block;
 		position: relative;
-		box-shadow: 0px 0px 0px 7px #fff, 0px 0px 0px 8px rgba(0, 0, 0, 0.1);
+		box-shadow: 0px 0px 0px 7px #233d5a, 0px 0px 0px 8px rgba(0, 0, 0, 0.1);
 	}
 
 		.indimage img {
@@ -3106,7 +3106,7 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #0b131b;
+			background-color: #0b131bf1;
 			color: #ffffff;
 		}
 
